--- a/SemanticRouter_01.ipynb
+++ b/SemanticRouter_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHe5ssaHNDNZRx67A8A/8X",
+      "authorship_tag": "ABX9TyPVTEMeouCkr6Mwdb2PwG4f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,37 +28,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 20,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TfvmyE-9BiYX",
-        "outputId": "737878c0-fcac-493a-a536-5618ec774355"
+        "id": "TfvmyE-9BiYX"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m51.9/51.9 kB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m18.2/18.2 MB\u001b[0m \u001b[31m30.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m223.4/223.4 kB\u001b[0m \u001b[31m12.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m14.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.9/75.9 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.9/76.9 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "lida 0.0.10 requires fastapi, which is not installed.\n",
-            "lida 0.0.10 requires kaleido, which is not installed.\n",
-            "lida 0.0.10 requires python-multipart, which is not installed.\n",
-            "lida 0.0.10 requires uvicorn, which is not installed.\n",
-            "llmx 0.0.15a0 requires tiktoken, which is not installed.\n",
-            "tensorflow-probability 0.22.0 requires typing-extensions<4.6.0, but you have typing-extensions 4.9.0 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install -qU semantic-router==0.0.17"
       ]
@@ -97,7 +71,7 @@
       "metadata": {
         "id": "cclNjBGjB3VY"
       },
-      "execution_count": 6,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -110,7 +84,7 @@
         "# os.environ[\"COHERE_API_KEY\"] = os.getenv(\"COHERE_API_KEY\") or getpass(\n",
         "#     \"Enter Cohere API Key: \"\n",
         "# )\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
         "\n",
         "# encoder = CohereEncoder()\n",
         "encoder = OpenAIEncoder()"
@@ -118,7 +92,7 @@
       "metadata": {
         "id": "mNnRZvcVB3X2"
       },
-      "execution_count": 3,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -133,15 +107,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fBUnwQgZB3ad",
-        "outputId": "fd18cca8-8e6b-439b-fee5-25782201ebce"
+        "outputId": "2735c593-6b39-40b1-bccf-9c90e539e022"
       },
-      "execution_count": 7,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\u001b[32m2024-01-21 12:46:55 INFO semantic_router.utils.logger Initializing RouteLayer\u001b[0m\n"
+            "\u001b[32m2024-01-21 14:04:49 INFO semantic_router.utils.logger Initializing RouteLayer\u001b[0m\n"
           ]
         }
       ]
@@ -156,9 +130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eoSJmrpkB3dA",
-        "outputId": "19bafdd3-63f5-400b-c4d3-7a0579bee933"
+        "outputId": "f88ce31b-3a27-4af7-f29c-e3491340827f"
       },
-      "execution_count": 19,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -168,7 +142,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 25
         }
       ]
     },
