--- a/SemanticRouter_01.ipynb
+++ b/SemanticRouter_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVTEMeouCkr6Mwdb2PwG4f",
+      "authorship_tag": "ABX9TyOcQyJz11FscNVDigmMYeJ8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,38 +40,122 @@
     {
       "cell_type": "code",
       "source": [
+        "# Questions for Recommending Products on Amazon or E-commerce Platform\n",
+        "recommendation_questions = [\n",
+        "    \"Can you recommend products based on my previous purchases?\",\n",
+        "    \"How are product recommendations personalized for my preferences?\",\n",
+        "    \"What are the current trending products in [specific category]?\",\n",
+        "    \"Can you show me popular products in [a particular department]?\",\n",
+        "    \"Can you provide comparisons between similar products?\",\n",
+        "    \"Are there any alternative products that I might be interested in?\",\n",
+        "    \"Are there any ongoing promotions or discounts on products I frequently buy?\",\n",
+        "    \"Can you notify me of upcoming sales or promotions for specific products?\",\n",
+        "    \"Is the product I'm interested in currently in stock?\",\n",
+        "    \"Can I be notified when an out-of-stock item becomes available?\",\n",
+        "    \"What are the reviews and ratings for this product?\",\n",
+        "    \"Can you recommend products with high customer satisfaction?\",\n",
+        "    \"What are the latest products in [a certain category]?\",\n",
+        "    \"Can I see new arrivals in [a specific department]?\",\n",
+        "    \"Can you suggest gift ideas for [occasion or recipient]?\",\n",
+        "    \"What are popular gifts in [a certain price range]?\",\n",
+        "    \"Can you recommend accessories or complementary products for [specific item]?\",\n",
+        "    \"Is this product compatible with [other product]?\",\n",
+        "    \"Can you provide more details about how a specific product works or its features?\",\n",
+        "    \"What is the return policy for this product?\",\n",
+        "    \"Can you provide information about the warranty for [specific product]?\",\n",
+        "    \"Can I customize certain features of a product before purchasing?\",\n",
+        "    \"Are there any personalized options available for [specific product]?\"\n",
+        "]\n",
+        "\n",
+        "# Questions for Comparing Products on Amazon or E-commerce Platform\n",
+        "comparison_questions = [\n",
+        "    \"What are the key features of [Product A] compared to [Product B]?\",\n",
+        "    \"How does the performance of [Product A] compare to [Product B] in terms of [specific specification]?\",\n",
+        "    \"What is the price difference between [Product A] and [Product B]?\",\n",
+        "    \"Which product offers better value for money based on its features and price?\",\n",
+        "    \"How do customers rate and review [Product A] compared to [Product B]?\",\n",
+        "    \"Are there any common strengths or weaknesses mentioned in customer reviews?\",\n",
+        "    \"What is the reputation of the brands behind [Product A] and [Product B]?\",\n",
+        "    \"Can you provide information on customer satisfaction with each brand?\",\n",
+        "    \"Are there more accessories available for [Product A] or [Product B]?\",\n",
+        "    \"Can you recommend additional accessories for each product?\",\n",
+        "    \"How compatible is [Product A] with other devices compared to [Product B]?\",\n",
+        "    \"Are there any compatibility issues mentioned in customer reviews?\",\n",
+        "    \"What is the warranty duration for [Product A] and [Product B]?\",\n",
+        "    \"How responsive is the customer support for each product?\",\n",
+        "    \"Can you provide the size and dimensions of [Product A] and [Product B]?\",\n",
+        "    \"Are there notable differences in the physical size of these products?\",\n",
+        "    \"How does the power consumption of [Product A] compare to [Product B]?\",\n",
+        "    \"Are there any energy efficiency features mentioned for each product?\",\n",
+        "    \"Is there a difference in delivery time or shipping costs for [Product A] and [Product B]?\",\n",
+        "    \"Can I compare the shipping options available for each product?\",\n",
+        "    \"Are there any planned upgrades or new versions for [Product A] or [Product B]?\",\n",
+        "    \"Which product is more likely to remain relevant for a longer period?\"\n",
+        "]\n",
+        "\n",
+        "# Questions for Company Policies on Amazon or E-commerce Platform\n",
+        "policy_questions = [\n",
+        "    \"What is the return policy for products purchased on the platform?\",\n",
+        "    \"How does the refund process work?\",\n",
+        "    \"Are there any conditions or exceptions to the return policy?\",\n",
+        "    \"What is the warranty period for electronic products?\",\n",
+        "    \"Can you provide information on extended warranty options?\",\n",
+        "    \"Are there any restocking fees associated with returns?\",\n",
+        "    \"How can I initiate a return or refund for a product?\",\n",
+        "    \"What is the customer support process for handling return-related inquiries?\",\n",
+        "    \"Is there a satisfaction guarantee on products purchased?\",\n",
+        "    \"Are there any special policies for damaged or defective items?\",\n",
+        "    \"Can you provide details on the platform's privacy policy?\",\n",
+        "    \"How is customer data handled and protected?\",\n",
+        "    \"Are there any loyalty programs or benefits for frequent shoppers?\",\n",
+        "    \"What is the process for canceling an order?\",\n",
+        "    \"Can I track the status of my order in real-time?\",\n",
+        "    \"Are there any limitations on international shipping?\",\n",
+        "    \"How is customer feedback and reviews moderated on the platform?\",\n",
+        "    \"Can you provide information on the platform's fraud prevention measures?\",\n",
+        "    \"What steps are taken to ensure the security of customer transactions?\",\n",
+        "    \"Is there a buyer protection policy in place?\",\n",
+        "    \"What measures are in place to address product authenticity and counterfeit concerns?\",\n",
+        "    \"How are disputes between buyers and sellers resolved on the platform?\"\n",
+        "]\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Tw4Aii83b9Yy"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from semantic_router import Route\n",
         "\n",
         "recommendation = Route(\n",
         "    name=\"recommendation\",\n",
-        "    utterances=[\n",
-        "        \"Can you recommend products based on my previous purchases?\",\n",
-        "        \"How are product recommendations personalized for my preferences?\",\n",
-        "        \"What are the current trending products in [specific category]?\",\n",
-        "        \"Can you suggest gift ideas for [occasion or recipient]?\",\n",
-        "        \"What are popular gifts in [a certain price range]?\",\n",
-        "        ],\n",
+        "    description=\"use this route for suggesting and recommending product to users\",\n",
+        "    utterances=recommendation_questions,\n",
         ")\n",
         "\n",
-        "from semantic_router import Route\n",
         "\n",
-        "productComparision = Route(\n",
-        "    name=\"productComparision\",\n",
-        "    utterances=[\n",
-        "        \"What are the key features of [Product A] compared to [Product B]?\",\n",
-        "        \"Can you provide a side-by-side feature comparison for [specific products]?\",\n",
-        "        \"How does the performance of [Product A] compare to [Product B] in terms of [specific specification]?\",\n",
-        "        \"Are there any notable differences in the technical specifications of these products?\",\n",
-        "        \"Which product offers better value for money based on its features and price?\",\n",
-        "        \"How do customers rate and review [Product A] compared to [Product B]?\",\n",
-        "        \"Are there any common strengths or weaknesses mentioned in customer reviews?\"\n",
-        "        ],\n",
+        "productComparison = Route(\n",
+        "    name=\"productComparison\",\n",
+        "    description=\"use this route for product comparison\",\n",
+        "    utterances=comparison_questions\n",
+        ")\n",
+        "\n",
+        "\n",
+        "\n",
+        "policy = Route(\n",
+        "    name=\"companyPolicy\",\n",
+        "    description=\"use this route for company policy\",\n",
+        "    utterances=policy_questions\n",
         ")"
       ],
       "metadata": {
         "id": "cclNjBGjB3VY"
       },
-      "execution_count": 22,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -84,7 +168,7 @@
         "# os.environ[\"COHERE_API_KEY\"] = os.getenv(\"COHERE_API_KEY\") or getpass(\n",
         "#     \"Enter Cohere API Key: \"\n",
         "# )\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
         "\n",
         "# encoder = CohereEncoder()\n",
         "encoder = OpenAIEncoder()"
@@ -92,14 +176,14 @@
       "metadata": {
         "id": "mNnRZvcVB3X2"
       },
-      "execution_count": 23,
+      "execution_count": 76,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "from semantic_router.layer import RouteLayer\n",
-        "routes = [recommendation, productComparision]\n",
+        "routes = [recommendation, productComparison,policy]\n",
         "rl = RouteLayer(encoder=encoder, routes=routes)"
       ],
       "metadata": {
@@ -107,80 +191,123 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fBUnwQgZB3ad",
-        "outputId": "2735c593-6b39-40b1-bccf-9c90e539e022"
+        "outputId": "f9f9c15d-14c5-4569-c631-a045eefa37a7"
       },
-      "execution_count": 24,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\u001b[32m2024-01-21 14:04:49 INFO semantic_router.utils.logger Initializing RouteLayer\u001b[0m\n"
+            "\u001b[32m2024-01-21 14:34:23 INFO semantic_router.utils.logger Initializing RouteLayer\u001b[0m\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Company Policy**"
+      ],
+      "metadata": {
+        "id": "iX8coG0CckWy"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "rl(\"which is most selling among these product: Dell laptop or keyboard\")"
+        "rl(\"tell me about company return policy\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eoSJmrpkB3dA",
-        "outputId": "f88ce31b-3a27-4af7-f29c-e3491340827f"
+        "outputId": "9537f1a7-9ea8-4478-8b1f-d354cae1ac9c"
       },
-      "execution_count": 25,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "RouteChoice(name=None, function_call=None, similarity_score=None, trigger=None)"
+              "RouteChoice(name='companyPolicy', function_call=None, similarity_score=None, trigger=None)"
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 79
         }
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**Recommendation**"
+      ],
       "metadata": {
-        "id": "2RkxnRfOB3fo"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "gemwTYxycpJ5"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "rl(\"What is trending now in women fashion\")"
+      ],
       "metadata": {
-        "id": "uyPT1UiEB3iF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q5OaCI30cnuZ",
+        "outputId": "a9d39c48-5585-41d8-adfc-2483b54b9867"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RouteChoice(name='recommendation', function_call=None, similarity_score=None, trigger=None)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Product Comparison**"
+      ],
+      "metadata": {
+        "id": "WmUfppW2c1KZ"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "rl(\"How is Product X better than Product Y?\")"
+      ],
       "metadata": {
-        "id": "_oL74n97B3ke"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "16cu_mrecznT",
+        "outputId": "07717821-d831-4e2a-e7c2-95f0128ffea9"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "FYacUc7XB3nO"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RouteChoice(name='productComparison', function_call=None, similarity_score=None, trigger=None)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
     }
   ]
 }
