--- a/SemanticRouter_01.ipynb
+++ b/SemanticRouter_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcQyJz11FscNVDigmMYeJ8",
+      "authorship_tag": "ABX9TyMlYE2k+jKNxYNZpl7eQ/uK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -168,7 +168,7 @@
         "# os.environ[\"COHERE_API_KEY\"] = os.getenv(\"COHERE_API_KEY\") or getpass(\n",
         "#     \"Enter Cohere API Key: \"\n",
         "# )\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
         "\n",
         "# encoder = CohereEncoder()\n",
         "encoder = OpenAIEncoder()"
@@ -306,6 +306,184 @@
           },
           "metadata": {},
           "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Function Calling**\n",
+        "\n",
+        "Integrating Search API"
+      ],
+      "metadata": {
+        "id": "jDcbcNYBdTlu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def search(query: str) -> str:\n",
+        "    \"\"\"Search product in a ecommerce platform.\n",
+        "\n",
+        "    :param query: search keywords. It should be in natural language, such as \"women fashion\", \"cricket bats\", \"Coffee mugs for office\"\n",
+        "    :type query: str\n",
+        "    :return: Details about products, such as name, brand, price, features etc.\"\"\"\n",
+        "    # using search API to find relevant products\n",
+        "    # response = search(query)\n",
+        "\n",
+        "    # appending product to product_card to be display in UI\n",
+        "    # product_card.append(response.response)\n",
+        "\n",
+        "    # generating a response in natural language\n",
+        "    # output = llm(response.response)\n",
+        "\n",
+        "    # return output\n",
+        "    return \"blah blah blah\"\n"
+      ],
+      "metadata": {
+        "id": "c3ghA_jZdXeS"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from semantic_router.utils.function_call import get_schema\n",
+        "\n",
+        "schema = get_schema(search)\n",
+        "schema"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EOyhL6_ZdXnh",
+        "outputId": "76e188b1-b703-425e-9744-1116c87ce68b"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'name': 'search',\n",
+              " 'description': 'Search product in a ecommerce platform.\\n\\n:param query: search keywords. It should be in natural language, such as \"women fashion\", \"cricket bats\", \"Coffee mugs for office\"\\n:type query: str\\n:return: Details about products, such as name, brand, price, features etc.',\n",
+              " 'signature': '(query: str) -> str',\n",
+              " 'output': \"<class 'str'>\"}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Questions for Finding a Specific Product on Amazon or E-commerce Platform\n",
+        "product_search_questions = [\n",
+        "    \"Can you help me find [specific product] on the platform?\",\n",
+        "    \"Is [specific product] available for purchase?\",\n",
+        "    \"What are the top results for [specific product]?\",\n",
+        "    \"Can you provide information on different models or versions of [specific product]?\",\n",
+        "    \"How can I narrow down my search for [specific product]?\",\n",
+        "    \"Are there any deals or discounts available for [specific product]?\",\n",
+        "    \"Can you recommend alternative products similar to [specific product]?\",\n",
+        "    \"What is the customer rating and feedback for [specific product]?\",\n",
+        "    \"Is there a way to check the availability of [specific product] in my location?\",\n",
+        "    \"Can I see a list of sellers offering [specific product] and compare prices?\",\n",
+        "    \"How can I filter search results for [specific product] by customer reviews?\",\n",
+        "    \"Are there any bundle deals available for [specific product]?\",\n",
+        "    \"Can I view the specifications and features of [specific product]?\",\n",
+        "    \"What is the shipping time for [specific product]?\",\n",
+        "    \"Can I set price alerts for [specific product] to be notified of discounts?\",\n",
+        "    \"How does the return policy apply to [specific product]?\",\n",
+        "    \"Is there a warranty or guarantee for [specific product]?\",\n",
+        "    \"Can you provide information on the availability of [specific product] in different colors or sizes?\",\n",
+        "    \"How can I check if [specific product] is eligible for Prime shipping?\",\n",
+        "    \"Are there any customer testimonials or success stories related to [specific product]?\",\n",
+        "    \"Can I see a demo or video review of [specific product] before purchasing?\",\n",
+        "    \"What accessories are commonly purchased with [specific product]?\",\n",
+        "    \"Is [specific product] part of any ongoing promotions or special events?\"]\n"
+      ],
+      "metadata": {
+        "id": "HWaCCrGjhPq6"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "search_product = Route(\n",
+        "    name=\"search_product\",\n",
+        "    utterances=product_search_questions,\n",
+        "    function_schema=schema,\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "qRwwe4ilgz-L"
+      },
+      "execution_count": 87,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rl.add(search_product)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P3AWPZrFg5CV",
+        "outputId": "7729d8cb-d5b7-485b-9e13-88fdba53f20a"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[32m2024-01-21 14:56:25 INFO semantic_router.utils.logger Adding `search_product` route\u001b[0m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "out = rl(\"Is Whiskas cat treat available in stock?\")\n",
+        "out"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IWzKz2ZQg7bQ",
+        "outputId": "fb72a40a-2fe9-40c8-d172-dc67d3b85d47"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[33m2024-01-21 14:58:50 WARNING semantic_router.utils.logger No LLM provided for dynamic route, will use OpenAI LLM default. Ensure API key is set in OPENAI_API_KEY environment variable.\u001b[0m\n",
+            "\u001b[32m2024-01-21 14:58:51 INFO semantic_router.utils.logger Extracting function input...\u001b[0m\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RouteChoice(name='search_product', function_call={'query': 'Is Whiskas cat treat available in stock?'}, similarity_score=None, trigger=None)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
         }
       ]
     }
